--- a/views/book.html
+++ b/views/book.html
@@ -15,7 +15,7 @@
     <script src="../js/twloader.js"></script>
     <script>
         //动态加载
-        TW_LoadScriptFromVersion("../env.js", ['../main.js','../js/store.js', 'book.js'], () => { Start() })
+        TW_LoadScriptFromVersion("../env.js", ['../main.js','../js/store.js','../js/http.js', 'book.js'], () => { Start() })
     </script>
     <style>
         #app {
